--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         }
 
         #logo {
-            height: 280px;
-            width: 280px;
+            height: 43.5vh;
+            width: 43.5vh;
             border-radius: 10px;
             margin: 0 10px;
         }
 
         .frentes {
-            height: 280px;
-            width: 280px;
+            height: 43.5vh;
+            width: 43.5vh;
             border-radius: 10px;
         }
 
@@ -40,11 +40,11 @@
         }
 
         .sub-div1 {
-            margin-left: 15.5vw;
+            margin-left: 15.7vw;
         }
 
         .div2 {
-            background-color: rgb(235, 168, 67);
+            background-color: rgb(252, 199, 119);
             border: 2px solid purple;
             padding: 22px;
             margin: 0 12px;
