--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         }
 
         #logo {
-            height: 43.5vh;
-            width: 43.5vh;
+            height: 90px;
+            width: 90px;
             border-radius: 10px;
             margin: 0 10px;
         }
 
         .frentes {
-            height: 43.5vh;
-            width: 43.5vh;
+            height: 90px;
+            width: 90px;
             border-radius: 10px;
         }
 
@@ -40,7 +40,7 @@
         }
 
         .sub-div1 {
-            margin-left: 15.7vw;
+            margin-left: 15px;
         }
 
         .div2 {
