--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             margin: 23px 8px;
         }
 
+        .cabecalho {
+            background-color: rgb(240, 240, 125);
+            border: 2px solid purple;
+            padding: 8px;
+            padding-top: 23px;
+            padding-bottom: 17px;
+            margin-bottom: 18px;
+            border-radius: 15px;
+        }
+
         #logo {
             height: 110px;
             width: 110px;
@@ -30,11 +40,10 @@
         }
 
         .div1 {
-            background-color: rgb(240, 240, 125);
+            background-color: rgb(236, 199, 143);
             border: 2px solid purple;
-            padding: 8px;
-            padding-top: 23px;
-            padding-bottom: 17px;
+            padding: 22px;
+            margin: 0 12px;
             margin-bottom: 18px;
             border-radius: 15px;
         }
@@ -76,6 +85,12 @@
             margin-bottom: -2px;
         }
 
+        img {
+            height: 110px;
+            width: 110px;
+            border-radius: 10px;
+        }
+
         footer {
             background-color: rgb(49, 47, 47);
             padding: 7px;
@@ -87,19 +102,20 @@
         footer > p {
             margin: 0;
             font-size: 19px;
+            font-weight: normal;
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="div1">
+        <div class="cabecalho">
             <img class="frentes" src="imagens/frente-cidade.jpg" alt="Frente Cidade">
             <img id="logo" src="imagens/logo.jpg" alt="Logo">
             <img class="frentes" src="imagens/frente-cassino.jpg" alt="Frente Cassino">
         </div>
     </header>
     <main>
-        <div class="div2">
+        <div class="div1">
             <h1>MISSÃO</h1>
             <p>Atender nossos clientes com o melhor açaí da região.</p>
             <hr>
@@ -109,6 +125,31 @@
             <h1>VALORES</h1>
             <p class="vlr1">Qualidade do produto.</p>
             <p class="vlr2">Qualidade do atendimento.</p>
+        </div>
+        <div class="div2">
+            <h1>NOSSOS PRODUTOS</h1>
+            <img src="imagens/acai-330ml.jpg" alt="Açaí 330ml">
+            <p>Açaí 330ml</p>
+            <img src="imagens/acai-550ml.jpg" alt="Açaí 550ml">
+            <p>Açaí 550ml</p>
+            <img src="imagens/acai-700ml.jpg" alt="Açaí 700ml">
+            <p>Açaí 700ml</p>
+            <img src="imagens/barca-g.jpg" alt="Barca G">
+            <p>Barca G</p>
+            <img src="imagens/barca-p.jpg" alt="Barca P">
+            <p>Barca P</p>
+            <img src="imagens/roleta-g.jpg" alt="Roleta G">
+            <p>Roleta G</p>
+            <img src="imagens/copos-felicidade-300ml-500ml.jpg" alt="Copos Felicidade 300ml/500ml">
+            <p>Copos da Felicidade 300ml/500ml</p>
+            <img src="imagens/cupuacus-330ml-550ml.jpg" alt="Cupuaçus 330ml/550ml">
+            <p>Cupuaçus 330ml/550ml</p>
+            <img src="imagens/marmita-1kg.jpg" alt="Marmita 1kg">
+            <p>Marmita 1kg</p>
+            <img src="imagens/milk-shakes-300ml-500ml.jpg" alt="Milk-Shakes 300ml/500ml">
+            <p>Milk-Shakes 300ml/500ml</p>
+            <img src="imagens/sorvetes.jpg" alt="Sorvetes">
+            <p>Sorvetes</p>
         </div>
     </main>
     <footer>
