--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         }
 
         #logo {
-            height: 360px;
-            width: 360px;
+            height: 345px;
+            width: 345px;
             border-radius: 10px;
             margin: 0 5px;
         }
@@ -80,9 +80,11 @@
         }
 
         img {
-            height: 250px;
-            width: 250px;
+            height: 275px;
+            width: 275px;
             border-radius: 10px;
+            margin-left: 10px;
+            margin-bottom: 10px;
         }
 
         footer {
