--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
             border: 2px solid purple;
             padding: 8px;
             padding-top: 23px;
-            padding-bottom: 17px;
+            padding-bottom: 22px;
             margin-bottom: 18px;
             border-radius: 15px;
         }
 
         #logo {
-            height: 341px;
-            width: 341px;
+            height: 339px;
+            width: 339px;
             border-radius: 10px;
-            margin: 0 5px;
+            display: block;
+            margin: auto;
         }
 
         .div2 {
@@ -45,9 +46,10 @@
         .div3 {
             background-color: rgb(236, 199, 143);
             border: 2px solid purple;
-            padding: 22px;
             margin: 0 12px;
-            margin-bottom: 18px;
+            padding: 22px 0;
+            padding-bottom: 10px;
+            margin-bottom: 22px;
             border-radius: 15px;
         }
 
@@ -63,6 +65,7 @@
             text-align: center;
             font-size: 22px;
             font-weight: bold;
+            margin-top: 10px;
             margin-bottom: 15px;
             font-style: italic;
         }
@@ -83,8 +86,8 @@
             height: 275px;
             width: 275px;
             border-radius: 10px;
-            margin-left: 9px;
-            margin-bottom: 10px;
+            display: block;
+            margin: auto;
         }
 
         footer {
