--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Casa do Açaí</title>
     <style>
+        @font-face {
+            font-family: 'Copy Duck';
+            src: url('fonte/copy-duck.otf') format('opentype');
+        }
+
         * {
             margin: 0;
             padding: 0;            
@@ -14,6 +19,11 @@
             font-family: Arial, Helvetica, sans-serif;
             background-color: rgb(252, 192, 252);
             margin: 23px 8px;
+        }
+
+        #titulo {
+            font-family: 'Copy Duck';
+            font-size: 48px;
         }
 
         #logo {
@@ -27,6 +37,16 @@
 
         div {
             box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.65);
+        }
+
+        .div0 {
+            background-color: rgb(240, 240, 125);
+            border: 2px solid purple;
+            padding: 8px;
+            padding-top: 23px;
+            padding-bottom: 22px;
+            margin-bottom: 18px;
+            border-radius: 15px;
         }
 
         .div1 {
@@ -163,15 +183,33 @@
             text-shadow: 2px 2px 6px rgba(18, 18, 90, 0.65);       
         }
 
-        footer {
+        .a-casa-do-acai {
+            background-color: rgb(94, 91, 91);
+            padding: 7px;
+            text-align: center;
+            font-style: normal;
+            border: 2px solid black;
+            border-radius: 15px;
+            box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.65);
+            line-height: 27px;
+        }
+
+        .rodape {
             background-color: rgb(49, 47, 47);
             padding: 7px;
             text-align: center;
+            font-style: normal;
             border: 2px solid black;
             border-radius: 15px;
             box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.65);
+            line-height: 27px;
         }
 
+        .sublinhado {
+            color: aqua;
+            text-decoration: underline;
+        }
+        
         footer > p {
             margin: 0;
             font-size: 19px;
@@ -181,6 +219,9 @@
 </head>
 <body>
     <header>
+        <div class="div0">
+            <h1 id="titulo">AÇAITERIA & SORVETERIA</h1>
+        </div>
         <div class="div1">
             <img id="logo" src="imagens/logo.jpg" alt="Logo">
         </div>
@@ -244,19 +285,24 @@
         <div class="div5">
             <h1 class="nossas-lojas">NOSSAS LOJAS</h1>
             <hr>
-            <img class="foto-loja" src="imagens/frente-cidade.jpg" alt="Frente Cidade">
+            <img class="foto-loja" src="imagens/fachada-cidade.jpg" alt="Fachada Cidade">
+            <img class="foto-loja" src="imagens/interior-cidade.jpg" alt="Interior Cidade">
+            <img class="foto-loja" src="imagens/interior-cidade2.jpg" alt="Interior Cidade 2">
             <p class="loja">LOJA DA CIDADE</p>
-            <p>Rua Visconde de Mauá, nº761, Bairro Lagoa, Rio Grande-RS.</p>
+            <p><a href="https://www.google.com/maps/place/R.+Visc.+de+Mau%C3%A1,+761+-+Lagoa,+Rio+Grande+-+RS,+96211-031/@-32.041192,-52.1269681,17z/data=!3m1!4b1!4m6!3m5!1s0x95119be62fb5674b:0xf6b966c4f2c799bf!8m2!3d-32.0411966!4d-52.1243932!16s%2Fg%2F11f3g88bx8?authuser=0&entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">Rua Visconde de Mauá, nº761, Bairro Lagoa, Rio Grande-RS.</a></p>
             <p>Fone: <a href="tel:+5553999046499">(53) 9 9904-6499</a></p>
             <hr>
-            <img class="foto-loja" src="imagens/frente-cassino.jpg" alt="Frente Cassino">
+            <img class="foto-loja" src="imagens/fachada-cassino.jpg" alt="Fachada Cassino">
+            <img class="foto-loja" src="imagens/fachada-cassino2.jpg" alt="Fachada Cassino 2">
             <p class="loja">LOJA DO CASSINO</p>
-            <p>Avenida Beira-Mar, nº590, Cassino, Rio Grande-RS.</p>
+            <p><a href="https://www.google.com/maps/place/Av.+Beira+Mar,+590+-+Rio+Grande,+RS,+96207-490/@-32.1897559,-52.1623508,17z/data=!3m1!4b1!4m6!3m5!1s0x951185c5513be193:0x2e6698798dc4a471!8m2!3d-32.1897605!4d-52.1597759!16s%2Fg%2F11c21h9261?authuser=0&entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">Avenida Beira-Mar, nº590, Cassino, Rio Grande-RS.</a></p>
             <p>Fone: <a href="tel:+5553984363069">(53) 9 8436-3069</a></p>
         </div>
     </main>
     <footer>
-        <p style="color: yellow;"><span style="color: lightgreen; text-decoration: underline;">2025</span> <i><span style="color: aquamarine;">Copyright </span><span style="color: lightsalmon;">&copy;</span><br>Todos os direitos reservados.</i></p>
+        <p class="a-casa-do-acai"><span style="color: darkred; font-weight: bold; text-shadow: 2px 2px 6px rgba(139, 0, 0, 0.65);">A CASA DO AÇAÍ </span><span style="color: lightsalmon; font-weight: bold;">versão </span><span class="sublinhado" style="font-weight: bold;">1.0</span><br><span style="color: yellow;">Desevolvido por </span><b class="sublinhado">KURINGA </b><span style="color: lightsalmon; font-weight: bold;">Desenvolvimento Web</span><br><span style="color: rgb(0, 255, 76);">Última atualização:</span> <span style="color: white;">07/01/2025</span></p>
+        <br>
+        <p class="rodape" style="color: yellow;"><span style="color: lightgreen; text-decoration: underline;">2025</span> <i><span style="color: aquamarine;">Copyright </span><span style="color: lightsalmon;">&copy;</span><br>Todos os direitos reservados.</i></p>
     </footer>
 </body>
 </html>
