--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
         #titulo {
             font-family: 'Copy Duck';
-            font-size: 48px;
+            font-size: 50px;
         }
 
         #logo {
-            height: 339px;
-            width: 339px;
+            height: 338px;
+            width: 338px;
             border-radius: 10px;
             display: block;
             margin: auto;
@@ -63,7 +63,7 @@
             background-color: rgb(240, 240, 125);
             border: 2px solid purple;
             margin: 0 12px;
-            padding: 22px 0;
+            padding: 22px 8px;
             margin-bottom: 18px;
             border-radius: 15px;
         }
@@ -72,7 +72,7 @@
             background-color: rgb(236, 199, 143);
             border: 2px solid purple;
             margin: 0 12px;
-            padding: 22px 0;
+            padding: 22px 8px;
             padding-bottom: 4px;
             margin-bottom: 18px;
             border-radius: 15px;
@@ -82,7 +82,7 @@
             background-color: rgb(240, 240, 125);
             border: 2px solid purple;
             margin: 0 12px;
-            padding: 22px 0;
+            padding: 22px 8px;
             padding-bottom: 5px;
             margin-bottom: 18px;
             border-radius: 15px;
@@ -92,7 +92,7 @@
             background-color: rgb(236, 199, 143);
             border: 2px solid purple;
             margin: 0 12px;
-            padding: 22px 0;
+            padding: 22px 8px;
             padding-bottom: 4px;
             margin-bottom: 18px;
             border-radius: 15px;
@@ -300,9 +300,9 @@
         </div>
     </main>
     <footer>
-        <p class="a-casa-do-acai"><span style="color: darkred; font-weight: bold; text-shadow: 2px 2px 6px rgba(139, 0, 0, 0.65);">A CASA DO AÇAÍ </span><span style="color: lightsalmon; font-weight: bold;">versão </span><span class="sublinhado" style="font-weight: bold;">1.0</span><br><span style="color: yellow;">Desevolvido por </span><b class="sublinhado">KURINGA </b><span style="color: lightsalmon; font-weight: bold;">Desenvolvimento Web</span><br><span style="color: rgb(0, 255, 76);">Última atualização:</span> <span style="color: white;">07/01/2025</span></p>
+        <p class="a-casa-do-acai"><span style="color: rgb(255, 0, 106); text-shadow: 2px 2px 6px rgba(255, 0, 106, 0.65); font-weight: bold; text-shadow: 2px 2px 6px rgba(139, 0, 0, 0.65);">A CASA DO AÇAÍ </span><span style="color: lightsalmon; font-weight: bold;">versão </span><span class="sublinhado" style="font-weight: bold;">1.0</span><br><span style="color: yellow;">Desevolvido por </span><b class="sublinhado">KURINGA </b><span style="color: lightsalmon; font-weight: bold;">Desenvolvimento Web</span><br><span style="color: rgb(0, 255, 76);">Última atualização:</span> <span style="color: white;">07/01/2025</span></p>
         <br>
         <p class="rodape" style="color: yellow;"><span style="color: lightgreen; text-decoration: underline;">2025</span> <i><span style="color: aquamarine;">Copyright </span><span style="color: lightsalmon;">&copy;</span><br>Todos os direitos reservados.</i></p>
     </footer>
 </body>
-</html>
+</html>p
