--- a/index.html
+++ b/index.html
@@ -83,13 +83,23 @@
             border: 2px solid purple;
             margin: 0 12px;
             padding: 22px 8px;
-            padding-bottom: 5px;
+            padding-bottom: 4px;
             margin-bottom: 18px;
             border-radius: 15px;
         }
 
         .div5 {
             background-color: rgb(236, 199, 143);
+            border: 2px solid purple;
+            margin: 0 12px;
+            padding: 22px 8px;
+            padding-bottom: 4px;
+            margin-bottom: 18px;
+            border-radius: 15px;
+        }
+
+        .div6 {
+            background-color: rgb(240, 240, 125);
             border: 2px solid purple;
             margin: 0 12px;
             padding: 22px 8px;
@@ -158,7 +168,7 @@
         .link-pedido-cid:hover, .link-pedido-cass:hover {
             color: white;
             background-color: blueviolet;
-            padding: 6px 8px;
+            padding: 3px 8px;
             text-shadow: 2px 2px 6px white;
             text-decoration: underline;
         }
@@ -181,6 +191,14 @@
             color: blue;
             font-style: normal;
             text-shadow: 2px 2px 6px rgba(18, 18, 90, 0.65);       
+        }
+
+        .aux {
+            padding-top: 10px;
+        }
+
+        .aux2 {
+            margin-top: -5px;
         }
 
         .a-casa-do-acai {
@@ -298,9 +316,15 @@
             <p><a href="https://www.google.com/maps/place/Av.+Beira+Mar,+590+-+Rio+Grande,+RS,+96207-490/@-32.1897559,-52.1623508,17z/data=!3m1!4b1!4m6!3m5!1s0x951185c5513be193:0x2e6698798dc4a471!8m2!3d-32.1897605!4d-52.1597759!16s%2Fg%2F11c21h9261?authuser=0&entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">Avenida Beira-Mar, nº590, Cassino, Rio Grande-RS.</a></p>
             <p>Fone: <a href="tel:+5553984363069">(53) 9 8436-3069</a></p>
         </div>
+
+        <div class="div6">
+            <h1>Também estamos no INSTAGRAM</h1>
+            <p class="aux"><a href="https://www.instagram.com/acasadoacai.riogrande/">INSTAGRAM da Loja da Cidade</a></p>
+            <p class="aux2"><a href="https://www.instagram.com/acasadoacai.cassino/">INSTAGRAM da Loja do Cassino</a></p>
+        </div>
     </main>
     <footer>
-        <p class="a-casa-do-acai"><span style="color: rgb(255, 0, 106); text-shadow: 2px 2px 6px rgba(255, 0, 106, 0.65); font-weight: bold; text-shadow: 2px 2px 6px rgba(139, 0, 0, 0.65);">A CASA DO AÇAÍ </span><span style="color: lightsalmon; font-weight: bold;">versão </span><span class="sublinhado" style="font-weight: bold;">1.0</span><br><span style="color: yellow;">Desevolvido por </span><b class="sublinhado">KURINGA </b><span style="color: lightsalmon; font-weight: bold;">Desenvolvimento Web</span><br><span style="color: rgb(0, 255, 76);">Última atualização:</span> <span style="color: white;">07/01/2025</span></p>
+        <p class="a-casa-do-acai"><span style="color: rgb(255, 0, 106); font-weight: bold; text-decoration: underline; text-shadow: 2px 2px 6px rgba(139, 0, 0, 0.65);">A CASA DO AÇAÍ </span><span style="color: lightsalmon; font-weight: bold;">versão </span><span class="sublinhado" style="font-weight: bold;">1.0</span><br><span style="color: yellow;">Desevolvido por </span><b class="sublinhado">KURINGA </b><span style="color: lightsalmon; font-weight: bold;">Desenvolvimento Web</span><br><span style="color: rgb(0, 255, 76);">Última atualização:</span> <span style="color: white;">07/01/2025</span></p>
         <br>
         <p class="rodape" style="color: yellow;"><span style="color: lightgreen; text-decoration: underline;">2025</span> <i><span style="color: aquamarine;">Copyright </span><span style="color: lightsalmon;">&copy;</span><br>Todos os direitos reservados.</i></p>
     </footer>
