--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             background-color: rgb(240, 240, 125);
             border: 2px solid purple;
             margin: 0 12px;
-            padding: 22px 8px;
+            padding: 22px 10px;
             margin-bottom: 18px;
             border-radius: 15px;
         }
@@ -100,6 +100,16 @@
 
         .div6 {
             background-color: rgb(240, 240, 125);
+            border: 2px solid purple;
+            margin: 0 12px;
+            padding: 22px 8px;
+            padding-bottom: 4px;
+            margin-bottom: 18px;
+            border-radius: 15px;
+        }
+
+        .div7 {
+            background-color: rgb(236, 199, 143);
             border: 2px solid purple;
             margin: 0 12px;
             padding: 22px 8px;
@@ -318,15 +328,28 @@
         </div>
 
         <div class="div6">
-            <h1>Também estamos no INSTAGRAM</h1>
-            <p class="aux"><a href="https://www.instagram.com/acasadoacai.riogrande/">INSTAGRAM da Loja da Cidade</a></p>
-            <p class="aux2"><a href="https://www.instagram.com/acasadoacai.cassino/">INSTAGRAM da Loja do Cassino</a></p>
+            <h1>Também estamos no WHATS...</h1>
+            <p class="aux"><a href="https://api.whatsapp.com/send?phone=5553999046499" target="_blank">WHATS da Loja da Cidade</a></p>
+            <p class="aux2"><a href="https://api.whatsapp.com/send?phone=5553984363069" target="_blank">WHATS da Loja do Cassino</a></p>
+        </div>
+
+        <div class="div7">
+            <h1>... e no INSTAGRAM!!</h1>
+            <p class="aux"><a href="https://www.instagram.com/acasadoacai.riogrande/" target="_blank">INSTAGRAM da Loja da Cidade</a></p>
+            <p class="aux2"><a href="https://www.instagram.com/acasadoacai.cassino/" target="_blank">INSTAGRAM da Loja do Cassino</a></p>
         </div>
     </main>
     <footer>
         <p class="a-casa-do-acai"><span style="color: rgb(255, 0, 106); font-weight: bold; text-decoration: underline; text-shadow: 2px 2px 6px rgba(139, 0, 0, 0.65);">A CASA DO AÇAÍ </span><span style="color: lightsalmon; font-weight: bold;">versão </span><span class="sublinhado" style="font-weight: bold;">1.0</span><br><span style="color: yellow;">Desevolvido por </span><b class="sublinhado">KURINGA </b><span style="color: lightsalmon; font-weight: bold;">Desenvolvimento Web</span><br><span style="color: rgb(0, 255, 76);">Última atualização:</span> <span style="color: white;">07/01/2025</span></p>
         <br>
         <p class="rodape" style="color: yellow;"><span style="color: lightgreen; text-decoration: underline;">2025</span> <i><span style="color: aquamarine;">Copyright </span><span style="color: lightsalmon;">&copy;</span><br>Todos os direitos reservados.</i></p>
+        <a href="https://api.whatsapp.com/send?phone=5553984363069" target="_blank"
+            style="position:fixed;bottom:10px;right:15px;">
+            <svg enable-background="new 0 0 512 512" width="50" height="50" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+                <path d="M256.064,0h-0.128l0,0C114.784,0,0,114.816,0,256c0,56,18.048,107.904,48.736,150.048l-31.904,95.104  l98.4-31.456C155.712,496.512,204,512,256.064,512C397.216,512,512,397.152,512,256S397.216,0,256.064,0z" fill="#4CAF50"/>
+                <path d="m405.02 361.5c-6.176 17.44-30.688 31.904-50.24 36.128-13.376 2.848-30.848 5.12-89.664-19.264-75.232-31.168-123.68-107.62-127.46-112.58-3.616-4.96-30.4-40.48-30.4-77.216s18.656-54.624 26.176-62.304c6.176-6.304 16.384-9.184 26.176-9.184 3.168 0 6.016 0.16 8.576 0.288 7.52 0.32 11.296 0.768 16.256 12.64 6.176 14.88 21.216 51.616 23.008 55.392 1.824 3.776 3.648 8.896 1.088 13.856-2.4 5.12-4.512 7.392-8.288 11.744s-7.36 7.68-11.136 12.352c-3.456 4.064-7.36 8.416-3.008 15.936 4.352 7.36 19.392 31.904 41.536 51.616 28.576 25.44 51.744 33.568 60.032 37.024 6.176 2.56 13.536 1.952 18.048-2.848 5.728-6.176 12.8-16.416 20-26.496 5.12-7.232 11.584-8.128 18.368-5.568 6.912 2.4 43.488 20.48 51.008 24.224 7.52 3.776 12.48 5.568 14.304 8.736 1.792 3.168 1.792 18.048-4.384 35.52z" fill="#FAFAFA"/>
+            </svg>
+        </a>
     </footer>
 </body>
-</html>p
+</html>
