--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
             text-decoration: underline;
         }
 
+        .elos::after {
+            content: '\00A0\1F517';
+        }
+
         .foto-loja {
             margin-bottom: 15px;
         }
@@ -317,26 +321,26 @@
             <img class="foto-loja" src="imagens/interior-cidade.jpg" alt="Interior Cidade">
             <img class="foto-loja" src="imagens/interior-cidade2.jpg" alt="Interior Cidade 2">
             <p class="loja">LOJA DA CIDADE</p>
-            <p><a href="https://www.google.com/maps/place/R.+Visc.+de+Mau%C3%A1,+761+-+Lagoa,+Rio+Grande+-+RS,+96211-031/@-32.041192,-52.1269681,17z/data=!3m1!4b1!4m6!3m5!1s0x95119be62fb5674b:0xf6b966c4f2c799bf!8m2!3d-32.0411966!4d-52.1243932!16s%2Fg%2F11f3g88bx8?authuser=0&entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">Rua Visconde de Mauá, nº761, Bairro Lagoa, Rio Grande-RS.</a></p>
-            <p>Fone: <a href="tel:+5553999046499">(53) 9 9904-6499</a></p>
+            <p><a class="elos" href="https://www.google.com/maps/place/R.+Visc.+de+Mau%C3%A1,+761+-+Lagoa,+Rio+Grande+-+RS,+96211-031/@-32.041192,-52.1269681,17z/data=!3m1!4b1!4m6!3m5!1s0x95119be62fb5674b:0xf6b966c4f2c799bf!8m2!3d-32.0411966!4d-52.1243932!16s%2Fg%2F11f3g88bx8?authuser=0&entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">Rua Visconde de Mauá, nº761, Bairro Lagoa, Rio Grande-RS.</a></p>
+            <p>Fone: <a class="elos" href="tel:+5553999046499">(53) 9 9904-6499</a></p>
             <hr>
             <img class="foto-loja" src="imagens/fachada-cassino.jpg" alt="Fachada Cassino">
             <img class="foto-loja" src="imagens/fachada-cassino2.jpg" alt="Fachada Cassino 2">
             <p class="loja">LOJA DO CASSINO</p>
-            <p><a href="https://www.google.com/maps/place/Av.+Beira+Mar,+590+-+Rio+Grande,+RS,+96207-490/@-32.1897559,-52.1623508,17z/data=!3m1!4b1!4m6!3m5!1s0x951185c5513be193:0x2e6698798dc4a471!8m2!3d-32.1897605!4d-52.1597759!16s%2Fg%2F11c21h9261?authuser=0&entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">Avenida Beira-Mar, nº590, Cassino, Rio Grande-RS.</a></p>
-            <p>Fone: <a href="tel:+5553984363069">(53) 9 8436-3069</a></p>
+            <p><a class="elos" href="https://www.google.com/maps/place/Av.+Beira+Mar,+590+-+Rio+Grande,+RS,+96207-490/@-32.1897559,-52.1623508,17z/data=!3m1!4b1!4m6!3m5!1s0x951185c5513be193:0x2e6698798dc4a471!8m2!3d-32.1897605!4d-52.1597759!16s%2Fg%2F11c21h9261?authuser=0&entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">Avenida Beira-Mar, nº590, Cassino, Rio Grande-RS.</a></p>
+            <p>Fone: <a class="elos" href="tel:+5553984363069">(53) 9 8436-3069</a></p>
         </div>
 
         <div class="div6">
             <h1>Também estamos no WHATS...</h1>
-            <p class="aux"><a href="https://api.whatsapp.com/send?phone=5553999046499" target="_blank">WHATS da Loja da Cidade</a></p>
-            <p class="aux2"><a href="https://api.whatsapp.com/send?phone=5553984363069" target="_blank">WHATS da Loja do Cassino</a></p>
+            <p class="aux"><a class="elos" href="https://api.whatsapp.com/send?phone=5553999046499" target="_blank">WHATS da Loja da Cidade</a></p>
+            <p class="aux2"><a class="elos" href="https://api.whatsapp.com/send?phone=5553984363069" target="_blank">WHATS da Loja do Cassino</a></p>
         </div>
 
         <div class="div7">
             <h1>... e no INSTAGRAM!!</h1>
-            <p class="aux"><a href="https://www.instagram.com/acasadoacai.riogrande/" target="_blank">INSTAGRAM da Loja da Cidade</a></p>
-            <p class="aux2"><a href="https://www.instagram.com/acasadoacai.cassino/" target="_blank">INSTAGRAM da Loja do Cassino</a></p>
+            <p class="aux"><a class="elos" href="https://www.instagram.com/acasadoacai.riogrande/" target="_blank">INSTA da Loja da Cidade</a></p>
+            <p class="aux2"><a class="elos" href="https://www.instagram.com/acasadoacai.cassino/" target="_blank">INSTA da Loja do Cassino</a></p>
         </div>
     </main>
     <footer>
