--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         #titulo {
             font-family: 'Copy Duck';
             font-size: 51px;
+            color: rgb(114, 3, 114);
         }
 
         #logo {
@@ -40,7 +41,7 @@
         }
 
         .div0 {
-            background-color: rgb(240, 240, 125);
+            background-image: linear-gradient(to right, purple, pink, rgb(248, 248, 100));
             border: 2px solid purple;
             padding: 8px;
             padding-top: 23px;
@@ -60,12 +61,23 @@
         }
 
         .div2 {
-            background-color: rgb(240, 240, 125);
+            background-image: url("imagens/roleta-g.jpg");
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: top;
             border: 2px solid purple;
             margin: 0 12px;
             padding: 22px 10px;
             margin-bottom: 18px;
             border-radius: 15px;
+        }
+
+        .div2 > h1 {
+            color: rgb(66, 230, 230);
+        }
+
+        .div2 > p {
+            color: rgb(218, 238, 245);
         }
 
         .div3 {
@@ -262,10 +274,10 @@
         <div class="div2">
             <h1>MISSÃO</h1>
             <p>Atender nossos clientes com o melhor açaí da região.</p>
-            <hr>
+            <br>
             <h1>VISÃO</h1>
             <p>Ser reconhecido como referência de qualidade.</p>
-            <hr>
+            <br>
             <h1>VALORES</h1>
             <p class="vlr1">Qualidade do produto.</p>
             <p class="vlr2">Qualidade do atendimento.</p>
