--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         .div0 {
-            background-image: linear-gradient(to right, purple, pink, rgb(248, 248, 100));
+            background-image: linear-gradient(to right, rgb(231, 4, 231), pink, rgb(248, 248, 100));
             border: 2px solid purple;
             padding: 8px;
             padding-top: 23px;
@@ -77,7 +77,7 @@
         }
 
         .div2 > p {
-            color: rgb(218, 238, 245);
+            color: rgb(147, 255, 255);
         }
 
         .div3 {
