--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         .div0 {
-            background-image: linear-gradient(to right, rgb(231, 4, 231), pink, rgb(248, 248, 100));
+            background-image: linear-gradient(to right, rgb(250, 144, 250), pink, rgb(248, 248, 100));
             border: 2px solid purple;
             padding: 8px;
             padding-top: 23px;
@@ -276,7 +276,7 @@
             <p>Atender nossos clientes com o melhor açaí da região.</p>
             <br>
             <h1>VISÃO</h1>
-            <p>Ser reconhecido como referência de qualidade.</p>
+            <p>Ser reconhecida como referência de qualidade.</p>
             <br>
             <h1>VALORES</h1>
             <p class="vlr1">Qualidade do produto.</p>
