--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         }
 
         .div2 {
-            background-image: url("imagens/roleta-g.jpg");
+            background-image: url("imagens/acai.jpeg");
             background-size: cover;
             background-attachment: fixed;
-            background-position: top;
+            background-position: bottom;
             border: 2px solid purple;
             margin: 0 12px;
             padding: 22px 10px;
@@ -73,11 +73,11 @@
         }
 
         .div2 > h1 {
-            color: rgb(66, 230, 230);
+            color: yellow;
         }
 
         .div2 > p {
-            color: rgb(147, 255, 255);
+            color: aqua;
         }
 
         .div3 {
