--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta description="Acaiteria e Sorveteria">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Casa do Açaí</title>
     <style>
