--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta description="Acaiteria e Sorveteria">
+    <meta name=”description” content="Somos uma açaiteria e sorveteria especializada em vender os melhores acais e sorvetes da regiao de Rio Grande e Cassino">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Casa do Açaí</title>
     <style>
