--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         }
 
         .div2 {
-            background-image: url("imagens/acai.jpeg");
+            background-image: url("imagens/acai.jpg");
             background-size: cover;
             background-attachment: fixed;
-            background-position: bottom;
+            background-position: center;
             border: 2px solid purple;
             margin: 0 12px;
             padding: 22px 10px;
